--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,6 @@
-#bodyFrame {
+/* #bodyFrame {
   padding: 5px;
-}
+} */
 
 #collapse {
   min-width: 80%;
@@ -9,15 +9,21 @@
 
 img {
   float: left;
-  margin: 5px;
+  margin: 10px;
+  padding: 5px;
 }
 
 #aboutMe {
-  display: inline;
+  margin: 10px;
+  margin-top: 0px;
   text-align: justify;
 }
 
 .flexbox {
   display: flex;
   justify-content: center;
+}
+
+.page-footer {
+  padding-bottom: 5px;
 }
