--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,11 +11,12 @@ img {
   float: left;
   margin: 10px;
   padding: 5px;
+  border: 5px solid black;
 }
 
 #aboutMe {
-  margin: 10px;
-  margin-top: 0px;
+  margin: 20px;
+  margin-top: 10px;
   text-align: justify;
 }
 
