update color profile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,17 @@
 /* #bodyFrame {
   padding: 5px;
 } */
+:root {
+  --backGr: #ffbe29;
+  --textstyle: "Lobster", cursive;
+  --textsize: 1.2em;
+  --textcolor: #8d153a;
+}
+
+.nav-wrapper {
+  background-color: var(--backGr);
+  color: var(--textcolor);
+}
 
 #collapse {
   min-width: 80%;
@@ -12,6 +23,7 @@ img {
   margin: 10px;
   padding: 5px;
   border: 5px solid black;
+  /* max-width: 800px; */
 }
 
 #aboutMe {
@@ -27,4 +39,5 @@ img {
 
 .page-footer {
   padding-bottom: 5px;
+  background-color: var(--backGr);
 }
