--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -43,6 +43,10 @@ img {
   text-align: justify;
 }
 
+#lattetext {
+  text-align: justify;
+}
+
 #aboutMeHeader {
   background-color: #ada8b6;
 }
@@ -75,14 +79,6 @@ img {
     margin: 10px;
     padding: 5px;
     border: 5px solid black;
-    /* max-width: 400px; */
-  }
-  #image-wrapper {
-    width: 600px;
-  }
-  .project1 {
-    justify-content: center;
-    /* height: 999px; */
   }
   #aboutMe {
     margin: 20px;
