--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -88,7 +88,7 @@ img {
     float: left;
     margin: 10px;
     padding: 5px;
-    border: 5px solid black;
+    border: 5px solid #61c9a8;
   }
   #aboutMe {
     margin: 20px;
